--- a/style.css
+++ b/style.css
@@ -5,14 +5,19 @@ body{
     font-family: 'Times New Roman', Times, serif;
     align-items: center;
     display: flex;
-    justify-content: center;
-    height: 100vh;
     overflow:hidden;
     margin: 0%;
+    justify-content: center;
+    height: 100vh;
+    
 }
-.main{
-    background: url('pic1.jpg')
-    no-repeat center center/cover ;
+.main_section{
+    background: url('pic1.jpg');
+    /* no-repeat center center/cover ; */
+    
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain, cover;
     position: absolute;
     top: -30px;
     left: -30px;
@@ -21,7 +26,7 @@ body{
     z-index: -1;
     filter: blur(0px);
 }
-.loading_text{
+.loading_num{
     font-size: 80px;
     color: rgb(249, 246, 246);
 }
