--- a/style.css
+++ b/style.css
@@ -14,16 +14,16 @@ body{
 .main_section{
     background: url('pic1.jpg');
     /* no-repeat center center/cover ; */
-    
+    height: 500px;
     background-repeat: no-repeat;
+    background-size: cover;
     background-position: center;
-    background-size: contain, cover;
-    position: absolute;
+    /* position: absolute;
     top: -30px;
     left: -30px;
     width: calc(100vw + 60px);
     height: calc(100vh + 60px);
-    z-index: -1;
+    z-index: -1; */
     filter: blur(0px);
 }
 .loading_num{
